--- a/boundary/reviewer_viewDetailUpdatePaperPage.html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage.html
@@ -182,7 +182,7 @@
                                     <label class="reviewer_viewPaperReview">
                                                 <!-- reeee -->
                                             </label>
-                                    <button type="button" id="reviewer_commentReview" class="blue_btn reviewer_viewPaperEditDetail_btn" data-toggle="modal" data-target="#reviewer_commentReviewModal">
+                                    <button type="button" id="reviewer_commentReview" class="blue_btn reviewer_viewPaperEditDetail_btn" data-toggle="modal" data-target="#viewPaperAddRating">
                                                 Comment others review
                 
                                             </button>
@@ -212,7 +212,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="reviewer_commentReviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="viewPaperAddRating" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
