--- a/boundary/reviewer_addRatingReviewPage.html
+++ b/boundary/reviewer_addRatingReviewPage.html
@@ -203,7 +203,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addRatingReviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index:1060">
+    <div class="modal fade" id="addRatingReviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
