--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -170,7 +170,7 @@
         <div class="content-wrapper">
             <!-- <section class="content">
                 <div class="container-fluid"> -->
-            <div class="row">
+            <div class="col-12" style="display: flex;">
                 <div class="col-md-5">
                     <div class="card" style="margin-top: 20px;margin-bottom: 0;">
                         <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
