--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -193,14 +193,14 @@
                                     </td>
                                     <td>
                                         <a href="reviewer_addRatingReviewPage.html">
-                                            <button type="button" class="detail_action_btn" data-toggle="modal">
+                                            <button type="button" class="detail_action_btn">
                                             Add
                                         </button>
                                         </a>
                                     </td>
                                     <td>
                                         <a href="reviewer_viewDetailUpdatePaperPage.html">
-                                            <button type="button" class="detail_action_btn" data-toggle="modal">
+                                            <button type="button" class="detail_action_btn">
                                             View Detail
                                         </button>
                                         </a>
