--- a/boundary/reviewer_addBidPage.html
+++ b/boundary/reviewer_addBidPage.html
@@ -144,56 +144,48 @@
                     <div class="card-body">
                         <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
                             <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
-                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Add review and rating of paper </p>
+                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Maximun number of review you would like to review</p>
+                        </div>
+                        <div class="card-body">
+
+                            <div class="row">
+                                <label class="searchLeft col-sm-2 ">Number of paper(s) to review</label>
+                                <div class="col-sm-4">
+                                    <input type="number" class="form-control" id="reviewer_addNoPaperReview" name="reviewer_addNoPaperReview" min="1" max="100" min="1" maxlength="3" maxlength="3">
+
+                                </div>
+                            </div>
+
+                            <input type="button" class="detail_action_btn" data-toggle="modal" data-target="#saveNoPaperReviewModal" value="Save">
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="card" style="margin-top: 20px;">
+                    <div class="card-body">
+                        <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
+                            <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
+                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Add bid </p>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <label class="searchLeft col-sm-2 ">Paper name</label>
                                 <div class="col-sm-4">
                                     <!-- retieve paper id -->
-                                    <label id="reviewer_viewPaperID">
-                                                <!-- 12345678 -->
-                                            </label>
+                                    <select id="reviewer_addPaperName" class="form-control select2  inlineBlock">
+                                        <!-- retrieve paper name from db -->
+                                        <option> </option>
+                                        <option></option>
+                                        <option></option>
+                                        <option></option>
+                                        <option></option>
+                                        </select>
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label class="searchLeft col-sm-2 ">Enter review</label>
-                                <div class="detail ">
-                                    <textarea id="reviewer_addReview" rows="10" cols="30"></textarea>
-                                </div>
-                                <br>
-                            </div>
-                            <div class="form-group row">
-                                <label class="searchLeft col-sm-2 ">Select rating</label>
 
-                                <div class="col-sm-9">
-                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating active">
-                                                        <input type="radio" id="reviewer_addRating3" autocomplete="off" checked> 3<br>(strong accept)
-                                                    </label>
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio"  id="reviewer_addRating2" autocomplete="off"> 2<br>(accept)
-                                                    </label>
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio"  id="reviewer_addRating1" autocomplete="off"> 1<br>(weak accept)
-                                                    </label>
 
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio" id="reviewer_addRating0" autocomplete="off">0<br>(borderline paper)
-                                                    </label>
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio" id="reviewer_addRatingMinus1" autocomplete="off"> -1<br>(weak reject)
-                                                    </label>
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio" id="reviewer_addRatingMinus3" autocomplete="off"> -2<br>(reject)
-                                                    </label>
-                                        <label class="btn btn-secondary reviewer_viewPaperAddRating">
-                                                        <input type="radio"  id="reviewer_addRatingMinus3" autocomplete="off"> -3<br>(strong reject)
-                                                    </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <input type="button" class="detail_action_btn" data-toggle="modal" data-target="#addRatingReviewModal" value="Add">
+                            <input type="button" class="detail_action_btn" data-toggle="modal" data-target="#addBidModal" value="Add">
 
                         </div>
 
@@ -202,19 +194,42 @@
             </div>
         </div>
     </div>
-
-    <div class="modal fade" id="addRatingReviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="saveNoPaperReviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
 
-                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Save Review and rating?</p>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Save number of review you would like to review?</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                 </div>
                 <div class="modal-body">
-                    <p class="deleteText">Are you sure you want to save?</p>
+                    <p class="deleteText">Are you sure you want to save number of review you would like to review?</p>
+                    <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
+                        Cancel
+                    </button>
+                    <button type="button" id="reviewer_save" style="float: right;background-color: #F7685B;color: white;" class="blue_btn">
+                        Confirm save
+                    </button>
+                </div>
+                <div class="modal-footer" style="border: none;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="addBidModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Add bid?</p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                </div>
+                <div class="modal-body">
+                    <p class="deleteText">Are you sure you want to add bid?</p>
                     <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
                         Cancel
                     </button>
